Dropped the font-size on the input-boxes for new nodes to match the new font size. Whitespace fixes in dominator.js

--- a/static/stax/styles.css
+++ b/static/stax/styles.css
@@ -31,6 +31,10 @@
     padding: 7px;
 }
 
+.stack-node-input {
+    font-size: 8pt;
+}
+
 .stack-leaf {
     display: block;
 }
